# ansible-role-librenms

./: .ansible-lint.yml  .gitignore  .yamllint  Makefile  README.md  devbox.json  justfile  pyproject.toml  requirements.yml
.github/workflows/: keepalive.yml  lint.yml  molecule.yml  release.yml
defaults/: main.yml
handlers/: main.yml
meta/: main.yml
molecule/default/: converge.yml  molecule.yml  side_effect.yml  verify.yml
tasks/: client.yml  devices.yml  main.yml  register.yml  server.yml
templates/: config.php.j2  snmpd.conf.v2c.j2
