[tool.poetry]
name = "pokerops.librenms"
version = "0.0.1"
description = ""
authors = ["pokerops"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
netaddr = "^0.8.0"
ansible-lint = { version = "*", markers = "platform_system != 'Windows'" }
molecule = {extras = ["molecule-podman", "podman"], version = "^4.0.3"}
ansible = "^8.6.1"
markupsafe = "^2.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
