[tool.poetry]
name = "pokerops.librenms"
version = "0.0.1"
description = ""
authors = ["pokerops"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
netaddr = "^0.8.0"
ansible-lint = { version = "*", markers = "platform_system != 'Windows'" }
ansible = "^8.6.1"
markupsafe = "^2.1.3"
molecule-docker = "^2.1.0"
molecule = "^6.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
