[tool.poetry]
name = "pokerops.librenms"
version = "0.0.1"
description = ""
authors = ["pokerops"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
ansible-lint = { version = "*", markers = "platform_system != 'Windows'" }
ansible = "^11.2.0"
netaddr = "^1.3.0"
markupsafe = "^3.0.2"
molecule-docker = "^2.1.0"
molecule = "^25.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
